WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
48395
Accelerated animation with missing values in keyframes is broken
https://bugs.webkit.org/show_bug.cgi?id=48395
Summary
Accelerated animation with missing values in keyframes is broken
Simon Fraser (smfr)
Reported
2010-10-26 20:44:36 PDT
Created
attachment 71976
[details]
Testcase
http://dev.sencha.com/animator/demos/healthy-choice/
shows problems when running with accelerated compositing; the second set of divs do not become visible at all.
Attachments
Testcase
(748 bytes, text/html)
2010-10-26 20:44 PDT
,
Simon Fraser (smfr)
no flags
Details
Patch
(10.15 KB, patch)
2010-10-26 22:13 PDT
,
Simon Fraser (smfr)
no flags
Details
Formatted Diff
Diff
Patch
(16.78 KB, patch)
2010-10-27 09:35 PDT
,
Simon Fraser (smfr)
mitz: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2010-10-26 20:46:26 PDT
The workaround is to explicitly specify opacity: 1 in keyframes that need it.
Simon Fraser (smfr)
Comment 2
2010-10-26 20:49:22 PDT
This probably regressed in
r66339
.
Simon Fraser (smfr)
Comment 3
2010-10-26 22:13:42 PDT
Created
attachment 71983
[details]
Patch
Jarred Nicholls
Comment 4
2010-10-26 23:18:25 PDT
Looks good to me.
Simon Fraser (smfr)
Comment 5
2010-10-27 08:26:12 PDT
Comment on
attachment 71983
[details]
Patch Removing ? until I figure out if I have to stuff the values into the first keyframe also.
Simon Fraser (smfr)
Comment 6
2010-10-27 09:35:46 PDT
Created
attachment 72045
[details]
Patch
WebKit Review Bot
Comment 7
2010-10-27 09:37:15 PDT
Attachment 72045
[details]
did not pass style-queue: Failed to run "['WebKitTools/Scripts/check-webkit-style']" exit_code: 1 WebCore/rendering/RenderLayerBacking.cpp:1121: Tests for true/false, null/non-null, and zero/non-zero should all be done without equality comparisons. [readability/comparison_to_zero] [5] Total errors found: 1 in 9 files If any of these errors are false positives, please file a bug against check-webkit-style.
Jarred Nicholls
Comment 8
2010-10-27 09:46:15 PDT
bool isFirstOrLastKeyframe = !key || key == 1; // per style check... ?
Simon Fraser (smfr)
Comment 9
2010-10-27 09:49:01 PDT
http://trac.webkit.org/changeset/70657
(In reply to
comment #8
)
> bool isFirstOrLastKeyframe = !key || key == 1; // per style check... ?
I think what I have is more readable. I am purposefully ignoring the style check.
Jarred Nicholls
Comment 10
2010-10-27 09:54:58 PDT
Indeed. Good deal.
WebKit Review Bot
Comment 11
2010-10-27 14:03:24 PDT
http://trac.webkit.org/changeset/70657
might have broken GTK Linux 32-bit Debug and Qt Linux Release
Csaba Osztrogonác
Comment 12
2010-10-27 14:32:00 PDT
(In reply to
comment #11
)
>
http://trac.webkit.org/changeset/70657
might have broken GTK Linux 32-bit Debug and Qt Linux Release
FYI: Qt specifix expected results landed in:
http://trac.webkit.org/changeset
/70710 Please don't ignore commnts of sheriffbot! He usually tell the truth.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug